# xsafe-contracts

./: .env.example  .gitignore  .solhint.json  .solhintignore  LICENSE  README.md  foundry.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pr.yml
.husky/: pre-commit
script/: Create2Factory.s.sol
src/: Create2Factory.sol  Create3Factory.sol  PredictiveDeployer.sol
src/create2/: Create2Factory.sol
src/create2/interfaces/: ICreate2Factory.sol  ICreate2FactoryAdmin.sol
src/create3/: Create3Factory.sol
src/create3/interfaces/: ICreate3Factory.sol  ICreate3FactoryAdmin.sol
src/dependencies/access/: Ownable.sol
src/dependencies/cryptography/: ECDSA.sol
src/dependencies/libraries/: Address.sol  StorageSlot.sol  Strings.sol
src/dependencies/proxy/: ERC1967Proxy.sol  ERC1967Utils.sol  Proxy.sol
src/interfaces/: ICreate2Factory.sol  IPredictiveDeployer.sol  IPredictiveDeployerAdmin.sol
src/utils/: ECDSA.sol
test/: Child.t.sol  Create2Factory.admin.t.sol  Create2Factory.t.sol  PredictiveDeployer.admin.t.sol  PredictiveDeployer.t.sol
test/common/: Child.t.sol  Constants.t.sol  TestSetup.t.sol  constants.t.sol
test/create2/: Create2Factory.admin.t.sol  Create2Factory.t.sol
test/create2/common/: TestSetup.t.sol
test/create2/helpers/: DeploymentHelper.t.sol
test/create2/test_proxy/: ERC1967Proxy.t.sol
test/create3/: Create3Factory.admin.t.sol  Create3Factory.t.sol
test/create3/common/: Constants.t.sol  (+1 more)
test/helpers/: DeploymentHelper.t.sol
test/proxy/: ERC1967Proxy.t.sol
test/test_proxy/: ERC1967Proxy.t.sol
(+11 files in other folders)
